--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wokplace</title>
+    <title>Wokplace | We rock! We rule!</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +34,7 @@
     <!-- top navbar -->
     <nav class="navbar navbar-expand-lg navbar-light section-bg py-5 pt-3">
       <div class="container-fluid ps-5">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span class="logo d-flex align-items-baseline">
             <span class="logo-text">wokplace</span>
             <span class="d-flex">
@@ -66,7 +67,10 @@
               >
             </li>
             <li class="nav-item me-4">
-              <a class="nav-link active" aria-current="page" href="about-us.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="about-us.html"
                 >About Us</a
               >
             </li>
