--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wokplace</title>
+    <title>Wokplace | About Us</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,11 +30,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="./assets/js/main.js"></script>
   </head>
-  <body class="container-fluid p-0">
+  <body class="container-fluid p-0 about">
     <!-- top navbar -->
     <nav class="navbar navbar-expand-lg navbar-light section-bg py-5 pt-3">
       <div class="container-fluid ps-5">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span class="logo d-flex align-items-baseline">
             <span class="logo-text">wokplace</span>
             <span class="d-flex">
@@ -84,12 +85,16 @@
     </nav>
     <!-- top navbar -->
 
-    <section class="row m-0 pt-5">
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-9 mx-auto text-center px-5">
-        <h2 class="banner-title">
+    <section class="row m-0 py-5 yellow-bg">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="100"
+        class="col-lg-9 mx-auto text-center px-5"
+      >
+        <h2 class="banner-title pt-5">
           Your Calendar, Google Meet and Notion in a single app
         </h2>
-        <p class="banner-sub-title my-4">
+        <p class="banner-sub-title my-4 mb-5">
           At Wokplace, we believe that during your work hours you don't need to
           juggle between apps to perform day-to-day works. We're on a mission to
           bring busy professionals like you more headspace through making your
@@ -98,116 +103,38 @@
       </div>
     </section>
 
-    <section class="row m-0 py-5 my-5">
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-6 px-5">
-        <h2 class="banner-title">
-          Let's build a future where work-life balance is not arbitrary
-        </h2>
-        <p class="banner-sub-title my-4">
-          A comprehensive overview of important meeting details, allowing
-          participants to stay organized and focused on the agenda
-        </p>
-      </div>
-    </section>
-
-    <section class="row d-flex align-items-center m-0 section-bg pt-5">
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-6 ps-5 mt-5">
-        <h2 class="banner-title">
-          Stop juggling between Notion and Google Meet
-        </h2>
-        <p class="banner-sub-title my-4 pe-5">
-          In-Meeting Notes eliminates the need for participants to juggle
-          multiple note-taking tools or switch between applications, ensuring
-          that everyone can stay focused and engaged in the meeting discussion.
-        </p>
-      </div>
+    <section class="row m-0 py-5 orange-bg">
       <div
         data-aos="fade-up"
         data-aos-delay="100"
-        class="col-lg-6 d-flex flex-row-reverse mt-5 overflow-hidden"
+        class="col-lg-9 px-5 py-5 mx-auto text-center"
       >
-        <img
-          src="./assets/img/banner-4.png"
-          class="img-fluid"
-          style="margin-right: -12px"
-          alt=""
-        />
-      </div>
-      <div class="col-lg-12 d-flex">
-        <div class="triangles mt-5">
-          <div class="triangle-1"></div>
-          <div class="triangle-2"></div>
-          <div class="triangle-3"></div>
-        </div>
-      </div>
-    </section>
-
-    <section class="row d-flex align-items-center m-0 mt-5 mb-5 py-5">
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-6">
-        <div class="image-bg p-2">
-          <img src="./assets/img/banner-3.png" class="img-fluid" alt="" />
-        </div>
-      </div>
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-6 px-5">
-        <h2 class="banner-title">
-          Introducing Trails: Meeting Follow-ups simplified
+        <h2 class="banner-title mt-5 mb-5 text-white">
+          Let's build a future where work-life balance is not arbitrary
         </h2>
-        <p class="banner-sub-title my-4">
-          Trail serves as your virtual companion, diligently capturing every
-          interaction and organizing it into a coherent and easily accessible
-          series of meetings.
+        <p class="banner-sub-title my-4 mb-5">
+          <button
+            type="button"
+            class="btn btn-outline-secondary btn-careers bg-white p-3 ps-5 pe-5"
+          >
+            Careers
+          </button>
         </p>
       </div>
     </section>
 
-    <section class="row d-flex align-items-center m-0 mb-5 section-bg pt-5">
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-12 ps-5">
-        <h2 class="custom-title bold">
-          Customer-focused teams from across your company can use Wokplace
-        </h2>
-      </div>
-      <div data-aos="fade-up" data-aos-delay="100" class="col-lg-12">
-        <div class="container-fluid">
-          <div class="row mt-5">
-            <div class="col">
-              <div class="bg-white text-center p-3 pt-5">
-                <img class="w-50" src="./assets/img/tile-1.png" alt="" />
-                <p class="bold mt-3">Product</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="bg-white text-center p-3 pt-5">
-                <img class="w-50" src="./assets/img/tile-2.png" alt="" />
-                <p class="bold mt-3">Sales</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="bg-white text-center p-3 pt-5">
-                <img class="w-50" src="./assets/img/tile-3.png" alt="" />
-                <p class="bold mt-3">CXOs</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="bg-white text-center p-3 pt-5">
-                <img class="w-50" src="./assets/img/tile-4.png" alt="" />
-                <p class="bold mt-3">Remote Teams</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="bg-white text-center p-3 pt-5">
-                <img class="w-50" src="./assets/img/tile-5.png" alt="" />
-                <p class="bold mt-3">Recruiting</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-12 d-flex flex-row-reverse">
-        <div class="triangles mt-5">
-          <div class="triangle-1"></div>
-          <div class="triangle-2"></div>
-          <div class="triangle-3"></div>
-        </div>
+    <section class="row m-0 py-5 blue-bg">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="100"
+        class="col-lg-9 px-5 py-5 mx-auto text-center"
+      >
+        <h2 class="banner-title mt-5 text-white mb-5">Get started with Wokplace</h2>
+        <p class="banner-sub-title my-4 mb-5">
+          <button type="button" class="btn btn-primary btn-join p-3 ps-5 pe-5">
+            Join the waitlist
+          </button>
+        </p>
       </div>
     </section>
 
