--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wokplace | We rock! We rule!</title>
+    <title>Wokplace | We rock! We rule!!</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
