--- a/about-us.html
+++ b/about-us.html
@@ -129,7 +129,9 @@
         data-aos-delay="100"
         class="col-lg-9 px-5 py-5 mx-auto text-center"
       >
-        <h2 class="banner-title mt-5 text-white mb-5">Get started with Wokplace</h2>
+        <h2 class="banner-title mt-5 text-white mb-5">
+          Get started with Wokplace
+        </h2>
         <p class="banner-sub-title my-4 mb-5">
           <button type="button" class="btn btn-primary btn-join p-3 ps-5 pe-5">
             Join the waitlist
@@ -138,11 +140,11 @@
       </div>
     </section>
 
-    <footer class="row d-flex m-0 mb-5 py-5">
+    <footer class="row d-flex m-0 mb-5 py-5 footer__grid">
       <div
         data-aos="fade-up"
         data-aos-delay="100"
-        class="col-lg-3 col-41p text-center"
+        class="col-lg-3 col-41p text-center footer_logo_item"
       >
         <div class="d-flex justify-content-around">
           <span class="logo d-flex align-items-baseline">
