--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
       </div>
     </section>
 
-    <section class="row d-flex align-items-center m-0 mb-5 section-bg pt-5">
+    <section
+      class="row d-flex align-items-center m-0 mb-5 section-bg pt-5 teams__container"
+    >
       <div data-aos="fade-up" data-aos-delay="100" class="col-lg-12 ps-5">
         <h2 class="custom-title bold">
           Customer-focused teams from across your company can use Wokplace
@@ -235,11 +237,11 @@
       </div>
     </section>
 
-    <footer class="row d-flex m-0 mb-5 py-5">
+    <footer class="row d-flex m-0 mb-5 py-5 footer__grid">
       <div
         data-aos="fade-up"
         data-aos-delay="100"
-        class="col-lg-3 col-41p text-center"
+        class="col-lg-3 col-41p text-center footer_logo_item"
       >
         <div class="d-flex justify-content-around">
           <span class="logo d-flex align-items-baseline">
